chore: Reformat all Java code using google-java-format