@@ -38,86 +38,105 @@ import lombok.Getter;
 import org.apache.spark.sql.catalyst.encoders.ExpressionEncoder;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 
-/**
- * Spark Encoders for FHIR Resources. This object is thread safe.
- */
+/** Spark Encoders for FHIR Resources. This object is thread safe. */
 public class FhirEncoders implements Configurable<EncodingConfiguration> {
 
-  /**
-   * The reasonable default set of open types to encode with extension values.
-   */
-  public static final Set<String> STANDARD_OPEN_TYPES = Set.of(
-      "boolean",
-      "code",
-      "date",
-      "dateTime",
-      "decimal",
-      "integer",
-      "string",
-      "Coding",
-      "CodeableConcept",
-      "Address",
-      "Identifier",
-      "Reference"
-  );
+  /** The reasonable default set of open types to encode with extension values. */
+  public static final Set<String> STANDARD_OPEN_TYPES =
+      Set.of(
+          "boolean",
+          "code",
+          "date",
+          "dateTime",
+          "decimal",
+          "integer",
+          "string",
+          "Coding",
+          "CodeableConcept",
+          "Address",
+          "Identifier",
+          "Reference");
 
-  /**
-   * All possible open types in FHIR R4.
-   */
-  public static final Set<String> ALL_OPEN_TYPES = Set.of("base64Binary", "boolean", "canonical",
-      "code", "date", "dateTime", "decimal", "id", "instant", "integer", "markdown", "oid",
-      "positiveInt", "string", "time", "unsignedInt", "uri", "url", "uuid", "Address", "Age",
-      "Annotation", "Attachment", "CodeableConcept", "Coding", "ContactPoint", "Count", "Distance",
-      "Duration", "HumanName", "Identifier", "Money", "Period", "Quantity", "Range", "Ratio",
-      "Reference", "SampledData", "Signature", "Timing", "ContactDetail", "Contributor",
-      "DataRequirement", "Expression", "ParameterDefinition", "RelatedArtifact",
-      "TriggerDefinition", "UsageContext", "Dosage", "Meta");
+  /** All possible open types in FHIR R4. */
+  public static final Set<String> ALL_OPEN_TYPES =
+      Set.of(
+          "base64Binary",
+          "boolean",
+          "canonical",
+          "code",
+          "date",
+          "dateTime",
+          "decimal",
+          "id",
+          "instant",
+          "integer",
+          "markdown",
+          "oid",
+          "positiveInt",
+          "string",
+          "time",
+          "unsignedInt",
+          "uri",
+          "url",
+          "uuid",
+          "Address",
+          "Age",
+          "Annotation",
+          "Attachment",
+          "CodeableConcept",
+          "Coding",
+          "ContactPoint",
+          "Count",
+          "Distance",
+          "Duration",
+          "HumanName",
+          "Identifier",
+          "Money",
+          "Period",
+          "Quantity",
+          "Range",
+          "Ratio",
+          "Reference",
+          "SampledData",
+          "Signature",
+          "Timing",
+          "ContactDetail",
+          "Contributor",
+          "DataRequirement",
+          "Expression",
+          "ParameterDefinition",
+          "RelatedArtifact",
+          "TriggerDefinition",
+          "UsageContext",
+          "Dosage",
+          "Meta");
 
-
-  /**
-   * Cache of Encoders instances.
-   */
+  /** Cache of Encoders instances. */
   private static final Map<FhirEncodersKey, FhirEncoders> ENCODERS = new ConcurrentHashMap<>();
 
-  /**
-   * Cache of mappings between Spark and FHIR types.
-   */
-  private static final Map<FhirVersionEnum, DataTypeMappings> DATA_TYPE_MAPPINGS = new ConcurrentHashMap<>();
+  /** Cache of mappings between Spark and FHIR types. */
+  private static final Map<FhirVersionEnum, DataTypeMappings> DATA_TYPE_MAPPINGS =
+      new ConcurrentHashMap<>();
 
-  /**
-   * Cache of FHIR contexts.
-   */
+  /** Cache of FHIR contexts. */
   private static final Map<FhirVersionEnum, FhirContext> FHIR_CONTEXTS = new ConcurrentHashMap<>();
 
-  /**
-   * The FHIR context used by encoders produced by this instance.
-   */
-  @Getter
-  private final FhirContext context;
+  /** The FHIR context used by encoders produced by this instance. */
+  @Getter private final FhirContext context;
 
-  /**
-   * The data type mappings used by the encoders instance.
-   */
+  /** The data type mappings used by the encoders instance. */
   private final DataTypeMappings mappings;
 
-  /**
-   * Cached encoders to avoid having to re-create them. Thread-safe using ConcurrentHashMap.
-   */
+  /** Cached encoders to avoid having to re-create them. Thread-safe using ConcurrentHashMap. */
   private final Map<Integer, ExpressionEncoder<?>> encoderCache = new ConcurrentHashMap<>();
 
-  /**
-   * The maximum nesting level for expansion of recursive data types.
-   */
+  /** The maximum nesting level for expansion of recursive data types. */
   private final int maxNestingLevel;
 
-  /**
-   * The list of types that are encoded within open types, such as extensions.
-   */
+  /** The list of types that are encoded within open types, such as extensions. */
   private final Set<String> openTypes;
 
-  /**
-   * Indicates whether FHIR extension support should be enabled.
-   */
+  /** Indicates whether FHIR extension support should be enabled. */
   private final boolean enableExtensions;
 
   /**
@@ -130,8 +149,12 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
    * @param openTypes the list of types that are encoded within open types, such as extensions.
    * @param enableExtensions true if FHIR extension should be enabled.
    */
-  public FhirEncoders(final FhirContext context, final DataTypeMappings mappings,
-      final int maxNestingLevel, final Set<String> openTypes, final boolean enableExtensions) {
+  public FhirEncoders(
+      final FhirContext context,
+      final DataTypeMappings mappings,
+      final int maxNestingLevel,
+      final Set<String> openTypes,
+      final boolean enableExtensions) {
     this.context = context;
     this.mappings = mappings;
     this.maxNestingLevel = maxNestingLevel;
@@ -140,8 +163,8 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
   }
 
   /**
-   * Returns a cached FhirEncoders instance for the specified configuration, creating one if it
-   * does not already exist. This method is thread-safe and ensures that encoders with identical
+   * Returns a cached FhirEncoders instance for the specified configuration, creating one if it does
+   * not already exist. This method is thread-safe and ensures that encoders with identical
    * configurations are shared across the application.
    *
    * @param fhirVersion the FHIR version to use for encoding
@@ -150,17 +173,21 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
    * @param enableExtensions whether to enable extension encoding
    * @return a FhirEncoders instance configured with the specified parameters
    */
-  public static FhirEncoders getOrCreate(@Nonnull final FhirVersionEnum fhirVersion,
+  public static FhirEncoders getOrCreate(
+      @Nonnull final FhirVersionEnum fhirVersion,
       final int maxNestingLevel,
-      @Nonnull final Set<String> openTypes, final boolean enableExtensions) {
-    final FhirEncodersKey key = new FhirEncodersKey(fhirVersion, maxNestingLevel, openTypes,
-        enableExtensions);
-    return ENCODERS.computeIfAbsent(key, k -> {
-      final FhirContext context = contextFor(k.getFhirVersion());
-      final DataTypeMappings mappings = mappingsFor(k.getFhirVersion());
-      return new FhirEncoders(context, mappings, k.getMaxNestingLevel(), k.getOpenTypes(),
-          k.isEnableExtensions());
-    });
+      @Nonnull final Set<String> openTypes,
+      final boolean enableExtensions) {
+    final FhirEncodersKey key =
+        new FhirEncodersKey(fhirVersion, maxNestingLevel, openTypes, enableExtensions);
+    return ENCODERS.computeIfAbsent(
+        key,
+        k -> {
+          final FhirContext context = contextFor(k.getFhirVersion());
+          final DataTypeMappings mappings = mappingsFor(k.getFhirVersion());
+          return new FhirEncoders(
+              context, mappings, k.getMaxNestingLevel(), k.getOpenTypes(), k.isEnableExtensions());
+        });
   }
 
   /**
@@ -181,28 +208,31 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
    * @return a DataTypeMappings instance.
    */
   static DataTypeMappings mappingsFor(final FhirVersionEnum fhirVersion) {
-    return DATA_TYPE_MAPPINGS.computeIfAbsent(fhirVersion, version -> {
-      final String dataTypesClassName;
+    return DATA_TYPE_MAPPINGS.computeIfAbsent(
+        fhirVersion,
+        version -> {
+          final String dataTypesClassName;
 
-      if (version == FhirVersionEnum.R4) {
-        dataTypesClassName = "au.csiro.pathling.encoders.datatypes.R4DataTypeMappings";
-      } else {
-        throw new IllegalArgumentException("Unsupported FHIR version: " + version);
-      }
+          if (version == FhirVersionEnum.R4) {
+            dataTypesClassName = "au.csiro.pathling.encoders.datatypes.R4DataTypeMappings";
+          } else {
+            throw new IllegalArgumentException("Unsupported FHIR version: " + version);
+          }
 
-      try {
-        return (DataTypeMappings) Class.forName(dataTypesClassName).getDeclaredConstructor()
-            .newInstance();
-      } catch (final Exception createClassException) {
-        throw new IllegalStateException("Unable to create the data mappings "
-            + dataTypesClassName
-            + ". This is typically because the HAPI FHIR dependencies for "
-            + "the underlying data model are note present. Make sure the "
-            + " hapi-fhir-structures-* and hapi-fhir-validation-resources-* "
-            + " jars for the desired FHIR version are available on the class path.",
-            createClassException);
-      }
-    });
+          try {
+            return (DataTypeMappings)
+                Class.forName(dataTypesClassName).getDeclaredConstructor().newInstance();
+          } catch (final Exception createClassException) {
+            throw new IllegalStateException(
+                "Unable to create the data mappings "
+                    + dataTypesClassName
+                    + ". This is typically because the HAPI FHIR dependencies for "
+                    + "the underlying data model are note present. Make sure the "
+                    + " hapi-fhir-structures-* and hapi-fhir-validation-resources-* "
+                    + " jars for the desired FHIR version are available on the class path.",
+                createClassException);
+          }
+        });
   }
 
   /**
@@ -251,13 +281,17 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
     final RuntimeResourceDefinition definition = context.getResourceDefinition(type);
 
     final int key = type.getName().hashCode();
-    return (ExpressionEncoder<T>) encoderCache.computeIfAbsent(key, k ->
-        EncoderBuilder.of(definition,
-            context,
-            mappings,
-            maxNestingLevel,
-            scala.jdk.javaapi.CollectionConverters.asScala(openTypes).toSet(),
-            enableExtensions));
+    return (ExpressionEncoder<T>)
+        encoderCache.computeIfAbsent(
+            key,
+            k ->
+                EncoderBuilder.of(
+                    definition,
+                    context,
+                    mappings,
+                    maxNestingLevel,
+                    scala.jdk.javaapi.CollectionConverters.asScala(openTypes).toSet(),
+                    enableExtensions));
   }
 
   /**
@@ -271,8 +305,8 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
 
   /**
    * Returns the encoding configuration that corresponds to this FhirEncoders instance.
-   * <p>
-   * The configuration is constructed on-demand from the current state of this instance.
+   *
+   * <p>The configuration is constructed on-demand from the current state of this instance.
    *
    * @return the encoding configuration, never null
    */
@@ -285,5 +319,4 @@ public class FhirEncoders implements Configurable<EncodingConfiguration> {
         .openTypes(openTypes)
         .build();
   }
-
 }
